[package]
name = "test-with"
version = "0.14.7"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A lib help you run test with condition"
repository = "https://github.com/yanganto/test-with"
keywords = [ "testing", "condition", "toggle", "integration", "ignore" ]
categories = [ "development-tools" ]
rust-version = "1.77.0" # Due to std::fs::create_new

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [ "full" ] }
regex = { version = "1" }

reqwest = { version = "0.12", features = ["blocking"], optional = true }
ping = { version = "0.5", optional = true }
sysinfo = { version = "0.33", optional = true }
byte-unit = { version = "5.0", optional = true }
num_cpus = { version = "1.13", optional = true }
which = { version = "7.0", optional = true }
chrono = { version = "0.4", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
uzers = { version = "0.11.3", optional = true }

[features]
default = ["net", "resource", "user", "executable", "timezone"]
ign-msg = []

runtime = []
net = ["http", "icmp"]
http = ["reqwest"]
icmp = ["ping"]

resource = ["sysinfo", "byte-unit", "num_cpus"]
user = ["uzers"]
executable = ["which"]
timezone = ["chrono"]

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serial_test = "3.1.1"
libtest-with = { version = "0.8.1-4", features = ["net", "resource", "user", "executable", "timezone"] }
rstest = "0.24.0"
