[workspace]
members = ["derive", "lib", "examples-with-runner"]
resolver = "2"

[workspace.package]
version = "0.16.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yanganto/test-with"
keywords = [ "testing", "condition", "toggle", "integration", "ignore" ]
categories = [ "development-tools" ]
rust-version = "1.88.0"
