[package]
name = "test-with"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
test-with-derive = { version = "=0.16.0", path = "../derive" }

reqwest = { version = "0.13", features = ["blocking"], optional = true }
ping = { version = "0.7.1", optional = true }
sysinfo = { version = "0.38", optional = true }
byte-unit = { version = "5.0", optional = true }
num_cpus = { version = "1.13", optional = true }
which = { version = "8.0", optional = true }
chrono = { version = "0.4", optional = true }
libtest-mimic = { version = "0.8.2", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
uzers = { version = "0.11.3", optional = true }

[features]
default = ["net", "resource", "user", "executable", "timezone"]
ign-msg = ["test-with-derive/ign-msg"]

runtime = ["test-with-derive/runtime", "libtest-mimic"]
net = ["test-with-derive/net", "http", "icmp"]
http = ["test-with-derive/http", "reqwest"]
icmp = ["test-with-derive/icmp", "ping"]

resource = ["test-with-derive/resource", "sysinfo", "byte-unit", "num_cpus"]
user = ["test-with-derive/user", "uzers"]
executable = ["test-with-derive/executable", "which"]
timezone = ["test-with-derive/timezone", "chrono"]

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serial_test = "3.1.1"
rstest = "0.26.1"
